Add Tuna Melanie recipe.

--- a/recipes/tuna-melanie.html
+++ b/recipes/tuna-melanie.html
@@ -7,6 +7,26 @@
 <body>
 <h1>Tuna Melanie with Trapped Potatoes</h1>
 
+<img src="../images/tuna-steaks.webp" alt="Tuna steaks" width="30%">
+
+<h2>Ingredients (serves 2 old farts):</h2>
+<ul>
+    <li>3 tsp olive oil</li>
+    <li>A pinch of pepper</li>
+    <li>Dried thyme</li>
+    <li>1 tin of potatoes</li>
+    <li>2 x 125g/4oz tuna steaks, drained</li>
+    <li>2 tsp marmalade</li>
+</ul>
+
+<h2>Process</h2>
+<ol>
+    <li>Heat the oil, pepper, and thyme over medium heat.</li>
+    <li>Add the tinned (or <em>trapped</em>) potatoes. Fry until they turn golden.</li>
+    <li>Add the tuna steaks and put 2 teaspoonful of marmalade on top of each steak.</li>
+    <li>Turn the steaks over after two minutes and again place a dollop of marmalade on top of each steak.</li>
+    <li>Cook to your liking and serve.</li>
+</ol>
 
 </body>
 </html>
