Follow Odin-specified page format

--- a/recipes/tuna-melanie.html
+++ b/recipes/tuna-melanie.html
@@ -9,7 +9,8 @@
 
 <img src="../images/tuna-steaks.webp" alt="Tuna steaks" width="30%">
 
-<h2>Ingredients (serves 2 old farts):</h2>
+<h2>Description</h2>
+<h3>Ingredients (serves 2 old farts):</h3>
 <ul>
     <li>3 tsp olive oil</li>
     <li>A pinch of pepper</li>
@@ -19,7 +20,7 @@
     <li>2 tsp marmalade</li>
 </ul>
 
-<h2>Process</h2>
+<h3>Steps</h3>
 <ol>
     <li>Heat the oil, pepper, and thyme over medium heat.</li>
     <li>Add the tinned (or <em>trapped</em>) potatoes. Fry until they turn golden.</li>
