Add picture credits.

--- a/recipes/tuna-melanie.html
+++ b/recipes/tuna-melanie.html
@@ -7,7 +7,11 @@
 <body>
 <h1>Tuna Melanie with Trapped Potatoes</h1>
 
-<img src="../images/tuna-steaks.webp" alt="Tuna steaks" width="30%">
+<figure>
+    <img src="../images/tuna-steaks.webp" alt="Tuna steaks" width="30%">
+    <figcaption>Tuna steaks. Credits: Ioan Bilac <a href="https://www.pexels.com/photo/delicious-grilled-tuna-steak-6424962/">https://www.pexels.com/photo/delicious-grilled-tuna-steak-6424962/</a></figcaption>
+</figure>
+
 
 <h2>Description</h2>
 <h3>Ingredients (serves 2 old farts):</h3>
