Resize images to fit into screen

--- a/recipes/cauliflower-base-pizza.html
+++ b/recipes/cauliflower-base-pizza.html
@@ -8,7 +8,7 @@
 <h1>Slippery Wilf's Cauliflower Base Pizza</h1>
 
 <figure>
-    <img src="../images/cauliflower-pizza.jpeg" alt="Cauliflower base pizza">
+    <img src="../images/cauliflower-pizza.jpeg" alt="Cauliflower base pizza" width="30%">
     <figcaption>Cauliflower base pizza.</figcaption>
 </figure>
 
