--- a/recipes/sardine-and-feta-cheese-wrap.html
+++ b/recipes/sardine-and-feta-cheese-wrap.html
@@ -8,7 +8,7 @@
 <h1>Bubbles McParty's Sardine and Feta Cheese Wrap</h1>
 
 <figure>
-    <img src="../images/sardine-and-feta-cheese-wrap.jpeg" alt="Sardine and Feta Cheese Wrap">
+    <img src="../images/sardine-and-feta-cheese-wrap.jpeg" alt="Sardine and Feta Cheese Wrap" width="30%">
     <figcaption>Sardine and Feta Cheese Wrap.</figcaption>
 </figure>
 
