--- a/recipes/venison-cabbage-and-chestnut.html
+++ b/recipes/venison-cabbage-and-chestnut.html
@@ -8,7 +8,7 @@
 <h1>Not now Madam Venison, Cabbage, and Chestnut</h1>
 
 <figure>
-    <img src="../images/venison-steaks.jpeg" alt="Venison steaks">
+    <img src="../images/venison-steaks.jpeg" alt="Venison steaks" width="30%">
     <figcaption>Venison steaks.</figcaption>
 </figure>
 
