Organize pages on homepage

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Odin Recipes</title>
+    <title>Mortimer & Whitehouse Gone Fishing Recipes</title>
 </head>
 <body>
-<h1>Odin Recipes</h1>
+<h1>Mortimer & Whitehouse Gone Fishing Recipes</h1>
 <ul>
     <li> <a href="recipes/tuna-melanie.html">Tuna Melanie with Trapped Potatoes</a></li>
+    <li> <a href="recipes/chicken-pilaf.html">Park and Ride One-Pan Chicken Pilaf</a></li>
+    <li> <a href="recipes/sardine-and-feta-cheese-wrap.html">Bubbles McParty's Sardine and Feta Cheese Wrap</a></li>
+    <li> <a href="recipes/cauliflower-base-pizza.html">Slippery Wilf's Cauliflower Base Pizza</a></li>
+    <li> <a href="recipes/venison-cabbage-and-chestnut.html">Not now Madam Venison, Cabbage, and Chestnut</a></li>
+    <li> <a href="recipes/breakfast-porridge.html">Boots McFoolish Breakfast Porridge</a></li>
 </ul>
 </body>
 </html>
